# screen-veil-tauri

./: .gitignore  GITHUB_PUSH_STEPS.md  PROGRESS.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
scripts/: build_windows.ps1
src/: main.js
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  veil.rs
