[package]
name = "screen-veil"
version = "1.0.0"
description = "Tauri Screen Veil - cross-platform global hotkey screen veil"
authors = ["QClaw"]
edition = "2021"

[lib]
name = "screen_veil_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 路径 C: 跨平台统一用 Tauri WebviewWindow, 不再需要平台特定依赖
# (Windows 和 macOS 都由 tauri 自带的 webview 处理, 体积更小、bug 更少)

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
